[package]
name = "dacx0501"
version = "0.2.1"
edition = "2021"
authors = ["Jared Moulton <jaredmoulton3@gmail.com>"]
license = "MIT"
description = """An embedded-hal driver implementation for the x0501 family of DACs"""
homepage = "https://github.com/jrmoulton/dacx0501"
repository = "https://github.com/jrmoulton/dacx0501"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "=1.0.0-alpha.8"
